# gnome-control-center

./: meson.build
panels/datetime/: cc-datetime-panel.ui
panels/display/: cc-display-panel.c  cc-display-panel.ui
panels/network/: cc-network-panel.c  cc-wifi-panel.c  hidden-wifi-helper.h  meson.build  net-device-wifi.c  network-dialogs.c  network-dialogs.h  use-new-editor.c  use-new-hotspot.c
panels/network/connection-editor/: cc-connection-editor.c  cc-connection-editor.h  cc-connection-editor.ui  cc-hidden-wifi-dialog.c  cc-hidden-wifi-dialog.h  cc-hidden-wifi-dialog.ui  ce-details-page.c  ce-details-page.h  ce-details-page.ui  ce-ip-page.c  ce-ip-page.h  ce-ip-page.ui  ce-password-row.c  ce-password-row.h  ce-password-row.ui  ce-security-page.c  ce-security-page.h  ce-security-page.ui  connection-editor.gresource.xml  meson.build
panels/network/contrib/: network-agent.c
panels/notifications/: cc-notifications-panel.c  cc-notifications-panel.ui
panels/online-accounts/: online-accounts.ui
panels/power/: cc-power-panel.c
panels/region/: cc-input-row.ui
panels/sound/: cc-output-test-dialog.ui  cc-speaker-test-button.ui
panels/user-accounts/: cc-avatar-chooser.ui  cc-password-dialog-private.c  cc-password-dialog-private.h  cc-password-dialog.c  cc-password-dialog.h  cc-password-dialog.ui  cc-user-panel.c  cc-user-panel.ui  meson.build
panels/wwan/: cc-wwan-data.c  cc-wwan-device.c
shell/: cc-panel-list.c  cc-panel-loader.c  cc-window.c  cc-window.ui
